--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IdPC front</title>
     <script src="scripts/pages/test.js"></script>
+    <script src="scripts/pages/konami.js"></script>
     <link rel="stylesheet" href="styles/global.css">
 </head>
 <body>
-    <button id="testapi_btn">tester api</button>
-    <p id="testapi_response"></p>
+    <div id="video">
+        <video loop>
+            <source src="./scripts/video/vid.mp4"/>
+        </video>
+    </div>
 </body>
 </html>
