Meilleur fonctionnement dégradé

--- a/pageTheme/changementTheme.html
+++ b/pageTheme/changementTheme.html
@@ -39,7 +39,10 @@
   <button id="showSlidersButton">Changer le theme avec RGB</button>
   <div class="bottomLeft">
     <div id="slidersContainer" class="slider-container hidden">
-      <button id="toggleGradientButton">Activer/ Désactiver le Gradient</button>
+      <div id="degradeContainer">
+      <input type="checkbox" id="toggleGradientCheckbox">
+      <p>Dégradé</p>
+     </div>
       <div class="slider">
         <div class="show-value">
           <div class="colorName">Rouge :</span>
