boutons et interface + stylé

--- a/pageTheme/changementTheme.html
+++ b/pageTheme/changementTheme.html
@@ -37,12 +37,13 @@
   </div>
 
   <button id="showSlidersButton">Changer le theme avec RGB</button>
+  <button id="showThemesButton">Themes préfaits</button>
   <div class="bottomLeft">
     <div id="slidersContainer" class="slider-container hidden">
       <div id="degradeContainer">
-      <input type="checkbox" id="toggleGradientCheckbox">
-      <p>Dégradé</p>
-     </div>
+        <input type="checkbox" id="toggleGradientCheckbox">
+        <p>Dégradé</p>
+      </div>
       <div class="slider">
         <div class="show-value">
           <div class="colorName">Rouge :</span>
