--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>IdPC front</title>
     <script src="scripts/pages/test.js"></script>
     <script src="scripts/pages/konami.js"></script>
+    <script src="scripts/pages/inventory.js"></script>
     <link rel="stylesheet" href="styles/global.css">
 </head>
 <body>
@@ -13,6 +14,19 @@
         <video loop>
             <source src="./scripts/video/vid.mp4"/>
         </video>
+    </div>
+    <!-- <img class="charlie_trouve" id="chapeau_trouve" src="./scripts/img/chapeau.png">
+    <img class="charlie_trouve" id="tete_trouve" src="./scripts/img/tete.png">
+    <img class="charlie_trouve" id="corps_trouve" src="./scripts/img/corps.png">
+    <img class="charlie_trouve" id="jambes_trouve" src="./scripts/img/jambes.png"> -->
+    <div id="inventory">
+        <img class="charlie" id="chapeau" src="./scripts/img/chapeau.png">
+        <img class="charlie" id="tete" src="./scripts/img/tete.png">
+        <img class="charlie" id="corps" src="./scripts/img/corps.png">
+        <img class="charlie" id="jambes" src="./scripts/img/jambes.png">
+    </div>
+    <div id="btn_inv">
+        <img src="./scripts/img/Backpack_icon.svg">
     </div>
 </body>
 </html>
