--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
     <link rel="stylesheet" href="styles/global.css">
 </head>
 <body>
+<div id=" tout">
+    <div id=" contenu">
     <div id="video">
         <video loop>
             <source src="./scripts/video/vid.mp4"/>
         </video>
     </div>
-    <!-- <img class="charlie_trouve" id="chapeau_trouve" src="./scripts/img/chapeau.png">
+    <img class="charlie_trouve" id="chapeau_trouve" src="./scripts/img/chapeau.png">
     <img class="charlie_trouve" id="tete_trouve" src="./scripts/img/tete.png">
     <img class="charlie_trouve" id="corps_trouve" src="./scripts/img/corps.png">
-    <img class="charlie_trouve" id="jambes_trouve" src="./scripts/img/jambes.png"> -->
+    <img class="charlie_trouve" id="jambes_trouve" src="./scripts/img/jambes.png">
+        </div>
     <div id="inventory">
         <img class="charlie" id="chapeau" src="./scripts/img/chapeau.png">
         <img class="charlie" id="tete" src="./scripts/img/tete.png">
@@ -27,6 +30,7 @@
     </div>
     <div id="btn_inv">
         <img src="./scripts/img/Backpack_icon.svg">
+    </div>
     </div>
 </body>
 </html>
