--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </video>
     </div>
     <img class="charlie_trouve" id="chapeau_trouve" src="./scripts/img/chapeau.png">
-    <img class="charlie_trouve" id="tete_trouve" src="./scripts/img/tete.png">
+    <!-- <img class="charlie_trouve" id="tete_trouve" src="./scripts/img/tete.png">
     <img class="charlie_trouve" id="corps_trouve" src="./scripts/img/corps.png">
-    <img class="charlie_trouve" id="jambes_trouve" src="./scripts/img/jambes.png">
+    <img class="charlie_trouve" id="jambes_trouve" src="./scripts/img/jambes.png"> -->
         </div>
     <div id="inventory">
         <img class="charlie" id="chapeau" src="./scripts/img/chapeau.png">
@@ -28,9 +28,9 @@
         <img class="charlie" id="corps" src="./scripts/img/corps.png">
         <img class="charlie" id="jambes" src="./scripts/img/jambes.png">
     </div>
-    <div id="btn_inv">
-        <img src="./scripts/img/Backpack_icon.svg">
-    </div>
+        <div id="btn_inv">
+            <img src="./scripts/img/Backpack_icon.svg">
+        </div>
     </div>
 </body>
 </html>
