--- a/pageTheme/changementTheme.html
+++ b/pageTheme/changementTheme.html
@@ -38,6 +38,17 @@
 
   <div class="button-container">
     <button id="showSlidersButton">Changer le thème avec RGB</button>
+    <div id="natureContainerWrapper">
+      <button id="natureButton">Nature</button>
+      <div id="natureContainer">
+        <div>
+          <p class="nature-theme" id="rien">rien</p>
+          <p class="nature-theme" id="arbre">arbre</p>
+          <p class="nature-theme" id="lune">lune</p>
+          <p class="nature-theme" id="soleil">soleil</p>
+      </div>
+      </div>
+    </div>
     <button id="themeButton">Thèmes</button>
     <div id="themeContainer">
       <div class="theme-circle" style="background-color: #e74c3c;"></div>
@@ -94,6 +105,7 @@
   <script src="themeSlider.js"></script>
   <script src="sliderAnimation.js"></script>
   <script src="themePrefaits.js"></script>
+  <script src="natureTheme.js"></script>
 </body>
 
 </html>
