--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id=" contenu">
     <div id="video">
         <video loop>
-            <source src="./scripts/video/vid.mp4"/>
+            <source src="./scripts/video/video.mp4"/>
         </video>
     </div>
     <img class="charlie_trouve" id="chapeau_trouve" src="./scripts/img/chapeau.png">
